--- a/index_module_types.html
+++ b/index_module_types.html
@@ -8,10 +8,6 @@
 <link title="Index of modules" rel=Appendix href="index_modules.html">
 <link title="Index of module types" rel=Appendix href="index_module_types.html">
 <link title="Conduit" rel="Chapter" href="Conduit.html">
-<link title="Conduit_async" rel="Chapter" href="Conduit_async.html">
-<link title="Conduit_async_ssl" rel="Chapter" href="Conduit_async_ssl.html">
-<link title="Conduit_localhost" rel="Chapter" href="Conduit_localhost.html">
-<link title="Conduit_lwt_tls" rel="Chapter" href="Conduit_lwt_tls.html">
 <link title="Conduit_lwt_unix" rel="Chapter" href="Conduit_lwt_unix.html">
 <link title="Conduit_lwt_unix_ssl" rel="Chapter" href="Conduit_lwt_unix_ssl.html">
 <link title="Conduit_mirage" rel="Chapter" href="Conduit_mirage.html">
@@ -26,12 +22,9 @@
 &nbsp;</div>
 <h1>Index of module types</h1>
 <table>
-<tr><td align="left"><br>E</td></tr>
-<tr><td><a href="Conduit_mirage.ENDPOINT.html">ENDPOINT</a> [<a href="Conduit_mirage.html">Conduit_mirage</a>]</td>
-<td><div class="info">
-Module type of a Vchan endpoint
-</div>
-</td></tr>
+<tr><td align="left"><br>H</td></tr>
+<tr><td><a href="Conduit_mirage.Handler.html">Handler</a> [<a href="Conduit_mirage.html">Conduit_mirage</a>]</td>
+<td></td></tr>
 <tr><td align="left"><br>I</td></tr>
 <tr><td><a href="Conduit.IO.html">IO</a> [<a href="Conduit.html">Conduit</a>]</td>
 <td><div class="info">
@@ -39,9 +32,6 @@ Module type for cooperative threading that can be satisfied by
     Lwt or Async
 </div>
 </td></tr>
-<tr><td align="left"><br>P</td></tr>
-<tr><td><a href="Conduit_mirage.PEER.html">PEER</a> [<a href="Conduit_mirage.html">Conduit_mirage</a>]</td>
-<td></td></tr>
 <tr><td align="left"><br>S</td></tr>
 <tr><td><a href="Resolver_lwt.S.html">S</a> [<a href="Resolver_lwt.html">Resolver_lwt</a>]</td>
 <td><div class="info">
@@ -57,13 +47,11 @@ Module type for a resolver that can map URIs to
 </td></tr>
 <tr><td><a href="Conduit_mirage.S.html">S</a> [<a href="Conduit_mirage.html">Conduit_mirage</a>]</td>
 <td></td></tr>
-<tr><td align="left"><br>T</td></tr>
-<tr><td><a href="Conduit_mirage.TLS.html">TLS</a> [<a href="Conduit_mirage.html">Conduit_mirage</a>]</td>
-<td></td></tr>
 <tr><td align="left"><br>V</td></tr>
-<tr><td><a href="Conduit_mirage.VCHAN_FLOW.html">VCHAN_FLOW</a> [<a href="Conduit_mirage.html">Conduit_mirage</a>]</td>
+<tr><td><a href="Conduit_mirage.VCHAN.html">VCHAN</a> [<a href="Conduit_mirage.html">Conduit_mirage</a>]</td>
 <td></td></tr>
-<tr><td><a href="Conduit_mirage.VCHAN_PEER.html">VCHAN_PEER</a> [<a href="Conduit_mirage.html">Conduit_mirage</a>]</td>
+<tr><td align="left"><br>X</td></tr>
+<tr><td><a href="Conduit_mirage.XS.html">XS</a> [<a href="Conduit_mirage.html">Conduit_mirage</a>]</td>
 <td></td></tr>
 </table>
 </body>
