--- a/index_modules.html
+++ b/index_modules.html
@@ -8,10 +8,6 @@
 <link title="Index of modules" rel=Appendix href="index_modules.html">
 <link title="Index of module types" rel=Appendix href="index_module_types.html">
 <link title="Conduit" rel="Chapter" href="Conduit.html">
-<link title="Conduit_async" rel="Chapter" href="Conduit_async.html">
-<link title="Conduit_async_ssl" rel="Chapter" href="Conduit_async_ssl.html">
-<link title="Conduit_localhost" rel="Chapter" href="Conduit_localhost.html">
-<link title="Conduit_lwt_tls" rel="Chapter" href="Conduit_lwt_tls.html">
 <link title="Conduit_lwt_unix" rel="Chapter" href="Conduit_lwt_unix.html">
 <link title="Conduit_lwt_unix_ssl" rel="Chapter" href="Conduit_lwt_unix_ssl.html">
 <link title="Conduit_mirage" rel="Chapter" href="Conduit_mirage.html">
@@ -29,29 +25,9 @@
 <tr><td align="left"><br>C</td></tr>
 <tr><td><a href="Conduit_lwt_unix_ssl.Client.html">Client</a> [<a href="Conduit_lwt_unix_ssl.html">Conduit_lwt_unix_ssl</a>]</td>
 <td></td></tr>
-<tr><td><a href="Conduit_lwt_tls.Client.html">Client</a> [<a href="Conduit_lwt_tls.html">Conduit_lwt_tls</a>]</td>
-<td></td></tr>
 <tr><td><a href="Conduit.html">Conduit</a> </td>
 <td><div class="info">
 Interface for establishing reliable stream-oriented connections.
-</div>
-</td></tr>
-<tr><td><a href="Conduit_async.html">Conduit_async</a> </td>
-<td><div class="info">
-Connection establishment using the
-    <a href="https://github.com/janestreet/async">Async</a> library
-</div>
-</td></tr>
-<tr><td><a href="Conduit_async_ssl.html">Conduit_async_ssl</a> </td>
-<td><div class="info">
-TLS/SSL connection establishment using OpenSSL and Async
-</div>
-</td></tr>
-<tr><td><a href="Conduit_localhost.html">Conduit_localhost</a> </td>
-<td></td></tr>
-<tr><td><a href="Conduit_lwt_tls.html">Conduit_lwt_tls</a> </td>
-<td><div class="info">
-TLS/SSL connections via OCaml-TLS
 </div>
 </td></tr>
 <tr><td><a href="Conduit_lwt_unix.html">Conduit_lwt_unix</a> </td>
@@ -76,17 +52,14 @@ Functorial connection establishment interface that is compatible with
 Radix tree that can do longest-prefix searches on string keys
 </div>
 </td></tr>
-<tr><td align="left"><br>D</td></tr>
-<tr><td><a href="Conduit_mirage.Dynamic_flow.html">Dynamic_flow</a> [<a href="Conduit_mirage.html">Conduit_mirage</a>]</td>
-<td></td></tr>
-<tr><td align="left"><br>E</td></tr>
-<tr><td><a href="Conduit_mirage.PEER.Endpoint.html">Endpoint</a> [<a href="Conduit_mirage.PEER.html">Conduit_mirage.PEER</a>]</td>
+<tr><td><a href="Conduit_mirage.Context.html">Context</a> [<a href="Conduit_mirage.html">Conduit_mirage</a>]</td>
 <td></td></tr>
 <tr><td align="left"><br>F</td></tr>
-<tr><td><a href="Conduit_mirage.TLS.FLOW.html">FLOW</a> [<a href="Conduit_mirage.TLS.html">Conduit_mirage.TLS</a>]</td>
-<td></td></tr>
-<tr><td><a href="Conduit_mirage.S.Flow.html">Flow</a> [<a href="Conduit_mirage.S.html">Conduit_mirage.S</a>]</td>
-<td></td></tr>
+<tr><td><a href="Conduit_mirage.Flow.html">Flow</a> [<a href="Conduit_mirage.html">Conduit_mirage</a>]</td>
+<td><div class="info">
+Dynamic flows.
+</div>
+</td></tr>
 <tr><td align="left"><br>I</td></tr>
 <tr><td><a href="Resolver_lwt.IO.html">IO</a> [<a href="Resolver_lwt.html">Resolver_lwt</a>]</td>
 <td><div class="info">
@@ -105,14 +78,6 @@ Given a DNS resolver <a href="https://github.com/mirage/ocaml-dns">implementatio
 <td><div class="info">
 Functor to construct a concrete resolver using a <a href="Conduit.IO.html"><code class="code">Conduit.IO</code></a>
     implementation, usually via either Lwt or Async
-</div>
-</td></tr>
-<tr><td><a href="Conduit_mirage.Make.html">Make</a> [<a href="Conduit_mirage.html">Conduit_mirage</a>]</td>
-<td></td></tr>
-<tr><td align="left"><br>N</td></tr>
-<tr><td><a href="Conduit_mirage.No_TLS.html">No_TLS</a> [<a href="Conduit_mirage.html">Conduit_mirage</a>]</td>
-<td><div class="info">
-Dummy TLS module which can be used if you don't want TLS support.
 </div>
 </td></tr>
 <tr><td align="left"><br>R</td></tr>
@@ -139,8 +104,6 @@ Functorial interface for resolving URIs to endpoints.
 </td></tr>
 <tr><td align="left"><br>S</td></tr>
 <tr><td><a href="Conduit_lwt_unix_ssl.Server.html">Server</a> [<a href="Conduit_lwt_unix_ssl.html">Conduit_lwt_unix_ssl</a>]</td>
-<td></td></tr>
-<tr><td><a href="Conduit_lwt_tls.Server.html">Server</a> [<a href="Conduit_lwt_tls.html">Conduit_lwt_tls</a>]</td>
 <td></td></tr>
 </table>
 </body>
