--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
 <link title="Index of modules" rel=Appendix href="index_modules.html">
 <link title="Index of module types" rel=Appendix href="index_module_types.html">
 <link title="Conduit" rel="Chapter" href="Conduit.html">
-<link title="Conduit_async" rel="Chapter" href="Conduit_async.html">
-<link title="Conduit_async_ssl" rel="Chapter" href="Conduit_async_ssl.html">
-<link title="Conduit_localhost" rel="Chapter" href="Conduit_localhost.html">
-<link title="Conduit_lwt_tls" rel="Chapter" href="Conduit_lwt_tls.html">
 <link title="Conduit_lwt_unix" rel="Chapter" href="Conduit_lwt_unix.html">
 <link title="Conduit_lwt_unix_ssl" rel="Chapter" href="Conduit_lwt_unix_ssl.html">
 <link title="Conduit_mirage" rel="Chapter" href="Conduit_mirage.html">
@@ -56,11 +52,7 @@ Connection establishment using the
     <a href="http://ocsigen.org/lwt/api/Lwt_unix">Lwt_unix</a> library
 </div>
 </td></tr>
-<tr><td class="module"><a href="Conduit_async.html">Conduit_async</a></td><td><div class="info">
-Connection establishment using the
-    <a href="https://github.com/janestreet/async">Async</a> library
-</div>
-</td></tr>
+<tr><td class="module">Conduit_async</td><td></td></tr>
 <tr><td class="module"><a href="Conduit_mirage.html">Conduit_mirage</a></td><td><div class="info">
 Functorial connection establishment interface that is compatible with
     the Mirage libraries.
@@ -108,7 +100,7 @@ functors are:
 <br>
 <table class="indextable">
 <tr><td class="module">Conduit_xenstore</td><td></td></tr>
-<tr><td class="module"><a href="Conduit_localhost.html">Conduit_localhost</a></td><td></td></tr>
+<tr><td class="module">Conduit_localhost</td><td></td></tr>
 </table>
 
 <p>
