--- a/type_Conduit_mirage.S.html
+++ b/type_Conduit_mirage.S.html
@@ -7,10 +7,6 @@
 <link title="Index of modules" rel=Appendix href="index_modules.html">
 <link title="Index of module types" rel=Appendix href="index_module_types.html">
 <link title="Conduit" rel="Chapter" href="Conduit.html">
-<link title="Conduit_async" rel="Chapter" href="Conduit_async.html">
-<link title="Conduit_async_ssl" rel="Chapter" href="Conduit_async_ssl.html">
-<link title="Conduit_localhost" rel="Chapter" href="Conduit_localhost.html">
-<link title="Conduit_lwt_tls" rel="Chapter" href="Conduit_lwt_tls.html">
 <link title="Conduit_lwt_unix" rel="Chapter" href="Conduit_lwt_unix.html">
 <link title="Conduit_lwt_unix_ssl" rel="Chapter" href="Conduit_lwt_unix_ssl.html">
 <link title="Conduit_mirage" rel="Chapter" href="Conduit_mirage.html">
@@ -22,37 +18,19 @@
 </head>
 <body>
 <code class="code"><span class="keyword">sig</span><br>
-&nbsp;&nbsp;<span class="keyword">module</span>&nbsp;<span class="constructor">Flow</span>&nbsp;:&nbsp;<span class="constructor">V1_LWT</span>.<span class="constructor">FLOW</span><br>
-&nbsp;&nbsp;<span class="keyword">type</span>&nbsp;<span class="keywordsign">'</span>a&nbsp;io&nbsp;=&nbsp;<span class="keywordsign">'</span>a&nbsp;<span class="constructor">Lwt</span>.t<br>
-&nbsp;&nbsp;<span class="keyword">type</span>&nbsp;ic&nbsp;=&nbsp;<span class="constructor">Flow</span>.flow<br>
-&nbsp;&nbsp;<span class="keyword">type</span>&nbsp;oc&nbsp;=&nbsp;<span class="constructor">Flow</span>.flow<br>
-&nbsp;&nbsp;<span class="keyword">type</span>&nbsp;flow&nbsp;=&nbsp;<span class="constructor">Flow</span>.flow<br>
-&nbsp;&nbsp;<span class="keyword">type</span>&nbsp;stack<br>
-&nbsp;&nbsp;<span class="keyword">type</span>&nbsp;peer<br>
-&nbsp;&nbsp;<span class="keyword">type</span>&nbsp;ctx<br>
-&nbsp;&nbsp;<span class="keyword">val</span>&nbsp;default_ctx&nbsp;:&nbsp;<span class="constructor">Conduit_mirage</span>.<span class="constructor">S</span>.ctx<br>
-&nbsp;&nbsp;<span class="keyword">val</span>&nbsp;init&nbsp;:<br>
-&nbsp;&nbsp;&nbsp;&nbsp;?peer:<span class="constructor">Conduit_mirage</span>.<span class="constructor">S</span>.peer&nbsp;<span class="keywordsign">-&gt;</span><br>
-&nbsp;&nbsp;&nbsp;&nbsp;?stack:<span class="constructor">Conduit_mirage</span>.<span class="constructor">S</span>.stack&nbsp;<span class="keywordsign">-&gt;</span><br>
-&nbsp;&nbsp;&nbsp;&nbsp;unit&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;<span class="constructor">Conduit_mirage</span>.<span class="constructor">S</span>.ctx&nbsp;<span class="constructor">Conduit_mirage</span>.<span class="constructor">S</span>.io<br>
+&nbsp;&nbsp;<span class="keyword">type</span>&nbsp;t&nbsp;=&nbsp;<span class="constructor">Conduit_mirage</span>.conduit<br>
+&nbsp;&nbsp;<span class="keyword">val</span>&nbsp;empty&nbsp;:&nbsp;<span class="constructor">Conduit_mirage</span>.<span class="constructor">S</span>.t<br>
+&nbsp;&nbsp;<span class="keyword">val</span>&nbsp;with_tcp&nbsp;:<br>
+&nbsp;&nbsp;&nbsp;&nbsp;<span class="constructor">Conduit_mirage</span>.<span class="constructor">S</span>.t&nbsp;<span class="keywordsign">-&gt;</span><br>
+&nbsp;&nbsp;&nbsp;&nbsp;<span class="keywordsign">'</span>a&nbsp;<span class="constructor">Conduit_mirage</span>.stackv4&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;<span class="keywordsign">'</span>a&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;<span class="constructor">Conduit_mirage</span>.<span class="constructor">S</span>.t&nbsp;<span class="constructor">Lwt</span>.t<br>
+&nbsp;&nbsp;<span class="keyword">val</span>&nbsp;with_tls&nbsp;:&nbsp;<span class="constructor">Conduit_mirage</span>.<span class="constructor">S</span>.t&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;<span class="constructor">Conduit_mirage</span>.<span class="constructor">S</span>.t&nbsp;<span class="constructor">Lwt</span>.t<br>
+&nbsp;&nbsp;<span class="keyword">val</span>&nbsp;with_vchan&nbsp;:<br>
+&nbsp;&nbsp;&nbsp;&nbsp;<span class="constructor">Conduit_mirage</span>.<span class="constructor">S</span>.t&nbsp;<span class="keywordsign">-&gt;</span><br>
+&nbsp;&nbsp;&nbsp;&nbsp;<span class="constructor">Conduit_mirage</span>.xs&nbsp;<span class="keywordsign">-&gt;</span><br>
+&nbsp;&nbsp;&nbsp;&nbsp;<span class="constructor">Conduit_mirage</span>.vchan&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;string&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;<span class="constructor">Conduit_mirage</span>.<span class="constructor">S</span>.t&nbsp;<span class="constructor">Lwt</span>.t<br>
 &nbsp;&nbsp;<span class="keyword">val</span>&nbsp;connect&nbsp;:<br>
-&nbsp;&nbsp;&nbsp;&nbsp;ctx:<span class="constructor">Conduit_mirage</span>.<span class="constructor">S</span>.ctx&nbsp;<span class="keywordsign">-&gt;</span><br>
-&nbsp;&nbsp;&nbsp;&nbsp;<span class="constructor">Conduit_mirage</span>.client&nbsp;<span class="keywordsign">-&gt;</span><br>
-&nbsp;&nbsp;&nbsp;&nbsp;(<span class="constructor">Conduit_mirage</span>.<span class="constructor">S</span>.flow&nbsp;*&nbsp;<span class="constructor">Conduit_mirage</span>.<span class="constructor">S</span>.ic&nbsp;*&nbsp;<span class="constructor">Conduit_mirage</span>.<span class="constructor">S</span>.oc)<br>
-&nbsp;&nbsp;&nbsp;&nbsp;<span class="constructor">Conduit_mirage</span>.<span class="constructor">S</span>.io<br>
-&nbsp;&nbsp;<span class="keyword">val</span>&nbsp;serve&nbsp;:<br>
-&nbsp;&nbsp;&nbsp;&nbsp;?timeout:int&nbsp;<span class="keywordsign">-&gt;</span><br>
-&nbsp;&nbsp;&nbsp;&nbsp;?stop:unit&nbsp;<span class="constructor">Conduit_mirage</span>.<span class="constructor">S</span>.io&nbsp;<span class="keywordsign">-&gt;</span><br>
-&nbsp;&nbsp;&nbsp;&nbsp;ctx:<span class="constructor">Conduit_mirage</span>.<span class="constructor">S</span>.ctx&nbsp;<span class="keywordsign">-&gt;</span><br>
-&nbsp;&nbsp;&nbsp;&nbsp;mode:<span class="constructor">Conduit_mirage</span>.server&nbsp;<span class="keywordsign">-&gt;</span><br>
-&nbsp;&nbsp;&nbsp;&nbsp;(<span class="constructor">Conduit_mirage</span>.<span class="constructor">S</span>.flow&nbsp;<span class="keywordsign">-&gt;</span><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="constructor">Conduit_mirage</span>.<span class="constructor">S</span>.ic&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;<span class="constructor">Conduit_mirage</span>.<span class="constructor">S</span>.oc&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;unit&nbsp;<span class="constructor">Conduit_mirage</span>.<span class="constructor">S</span>.io)&nbsp;<span class="keywordsign">-&gt;</span><br>
-&nbsp;&nbsp;&nbsp;&nbsp;unit&nbsp;<span class="constructor">Conduit_mirage</span>.<span class="constructor">S</span>.io<br>
-&nbsp;&nbsp;<span class="keyword">val</span>&nbsp;endp_to_client&nbsp;:<br>
-&nbsp;&nbsp;&nbsp;&nbsp;ctx:<span class="constructor">Conduit_mirage</span>.<span class="constructor">S</span>.ctx&nbsp;<span class="keywordsign">-&gt;</span><br>
-&nbsp;&nbsp;&nbsp;&nbsp;<span class="constructor">Conduit</span>.endp&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;<span class="constructor">Conduit_mirage</span>.client&nbsp;<span class="constructor">Conduit_mirage</span>.<span class="constructor">S</span>.io<br>
-&nbsp;&nbsp;<span class="keyword">val</span>&nbsp;endp_to_server&nbsp;:<br>
-&nbsp;&nbsp;&nbsp;&nbsp;ctx:<span class="constructor">Conduit_mirage</span>.<span class="constructor">S</span>.ctx&nbsp;<span class="keywordsign">-&gt;</span><br>
-&nbsp;&nbsp;&nbsp;&nbsp;<span class="constructor">Conduit</span>.endp&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;<span class="constructor">Conduit_mirage</span>.server&nbsp;<span class="constructor">Conduit_mirage</span>.<span class="constructor">S</span>.io<br>
-&nbsp;&nbsp;<span class="keyword">val</span>&nbsp;sexp_of_ctx&nbsp;:&nbsp;<span class="constructor">Conduit_mirage</span>.<span class="constructor">S</span>.ctx&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;<span class="constructor">Sexplib</span>.<span class="constructor">Sexp</span>.t<br>
+&nbsp;&nbsp;&nbsp;&nbsp;<span class="constructor">Conduit_mirage</span>.<span class="constructor">S</span>.t&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;<span class="constructor">Conduit_mirage</span>.client&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;<span class="constructor">Flow</span>.flow&nbsp;<span class="constructor">Lwt</span>.t<br>
+&nbsp;&nbsp;<span class="keyword">val</span>&nbsp;listen&nbsp;:<br>
+&nbsp;&nbsp;&nbsp;&nbsp;<span class="constructor">Conduit_mirage</span>.<span class="constructor">S</span>.t&nbsp;<span class="keywordsign">-&gt;</span><br>
+&nbsp;&nbsp;&nbsp;&nbsp;<span class="constructor">Conduit_mirage</span>.server&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;<span class="constructor">Conduit_mirage</span>.callback&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;unit&nbsp;<span class="constructor">Lwt</span>.t<br>
 <span class="keyword">end</span></code></body></html>
