--- a/type_Conduit_mirage.XS.html
+++ b/type_Conduit_mirage.XS.html
@@ -1,5 +1,4 @@
-<html>
-<head>
+<html><head>
 <link rel="stylesheet" href="style.css" type="text/css">
 <meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type">
 <link rel="Start" href="index.html">
@@ -15,13 +14,7 @@
 <link title="Resolver" rel="Chapter" href="Resolver.html">
 <link title="Resolver_lwt" rel="Chapter" href="Resolver_lwt.html">
 <link title="Resolver_lwt_unix" rel="Chapter" href="Resolver_lwt_unix.html">
-<link title="Resolver_mirage" rel="Chapter" href="Resolver_mirage.html"><title>Conduit URI resolution : Index of classes</title>
+<link title="Resolver_mirage" rel="Chapter" href="Resolver_mirage.html"><title>Conduit URI resolution : Conduit_mirage.XS</title>
 </head>
 <body>
-<div class="navbar">&nbsp;<a class="up" href="index.html" title="Index">Up</a>
-&nbsp;</div>
-<h1>Index of classes</h1>
-<table>
-</table>
-</body>
-</html>
+<code class="code"><span class="keyword">sig</span>&nbsp;&nbsp;<span class="keyword">end</span></code></body></html>
