Wrap Conduit_lwt as well

--- a/lib/intro.html
+++ b/lib/intro.html
@@ -29,7 +29,7 @@ then be connected to by the {{!transport}connection establishment} modules.
 
 All of the name resolvers conform to the {!Resolver.S} module type.
 The OS-specific implementations of this interface are: 
-{!modules: Resolver_lwt Resolver_lwt_unix Resolver_mirage}
+{!modules: Conduit_lwt.Resolver Conduit_lwt.Resolver_unix Resolver_mirage}
 
 {2:resolution Mirage Connections}
 
